# Shelf_Product_Count_Generation

./: .gitignore  LLM_VERIFIER_GUIDE.md  README.md  USAGE_GUIDE.md  check_status.py  exact_product_matcher.py  llm_verifier.py  llm_verifier_anthropic.py  llm_verifier_unified.py  main-test.py  main.py  pyproject.toml  requirements.txt  test.py  train_model.py
research/: 01_count_product_openai.ipynb  02_detection_llm_verification.ipynb  03_etract_ref_info.ipynb  04_image_embedding.ipynb  05_EfficientNet-V2-Training.ipynb  06_trained_model_similarity_product.ipynb  07_DINOv2_Fine-tuning_Implementation.ipynb  08_DINOv2_Similarty.ipynb  Transfer Learning for Computer Vision Tutorial.ipynb  stetching_shelf.ipynb  test.ipynb
scripts/: crop_detections.py  train_embedding.py
src/core/: llm_info_extractor.py  llm_matcher.py  product_detector.py
src/embedding/: product_dataset.py  product_embedding_model.py  triplet_loss.py
src/exception/: __init__.py
