[project]
name = "shelf-product-count-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "from-root>=1.3.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-openai>=0.3.35",
    "langsmith>=0.4.33",
    "opencv-python>=4.12.0.88",
    "rapidfuzz>=3.14.3",
    "transformers>=4.57.3",
    "ultralytics>=8.3.235",
]
